# AdventOfCode2023

c/: .gitignore  CMakeLists.txt  main.c
c/day1/: day1Solver.c  day1Solver.h
c/day1/input/: testinput2.txt
c/day2/: day2Solver.c  day2Solver.h
c/day3/: day3Solver.c  day3Solver.h
c/day4/: day4Solver.c  day4Solver.h
c/utils/: ArrayList.c  ArrayList.h
